This is the Foodie menu

--- a/practice.html
+++ b/practice.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <h1>Hi! Welcome To FOODIE DIGEST</h1>
-    <br>
-    <h2>Please check if your desired meal is on our menu</h2>
-    <div>
+    <section>
+    <h1>Please check if your desired meal is on our menu</h1>
+    <form>
         <br>
-        <label>What would you like?: </label><br><input type="text" name="food" id="food">
-        <br><br>
-        <button>Enter</button>
-    </div>
+        <label for="name" id="menu">What would you like?<br><input type="text" name="name" required></label><br>
+        <br>
+        <input type="submit" id="button"></input>
+    </form>
+    </section>
 </body>
 </html>
